# exemplar

./: .beman-tidy.yaml  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  stamp.sh  vcpkg.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: infrastructure-issues.md
.github/workflows/: catch2_exemplar_test.yml  ci_tests.yml  cookiecutter_test.yml  pre-commit-check.yml  pre-commit-update.yml  pre-commit.yml  reusable-beman-submodule-check.yml  static_exemplar_test.yml  todo_exemplar_test.yml  vcpkg-release.yml
cookiecutter/: catch2_test.sh  check_cookiecutter.sh  cookiecutter.json
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{cookiecutter.project_name}}/: .beman-tidy.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  lockfile.json  vcpkg-configuration.json  vcpkg.json
cookiecutter/{{cookiecutter.project_name}}/.github/: CODEOWNERS  pull_request_template.md
cookiecutter/{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: implementation-deficiency.md  paper-discussion.md
cookiecutter/{{cookiecutter.project_name}}/.github/workflows/: .beman_submodule  ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
cookiecutter/{{cookiecutter.project_name}}/examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp
cookiecutter/{{cookiecutter.project_name}}/include/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.hpp  {{cookiecutter.project_name}}.hpp
cookiecutter/{{cookiecutter.project_name}}/infra/: .beman_submodule  .pre-commit-config.yaml  README.md
cookiecutter/{{cookiecutter.project_name}}/infra/.github/: CODEOWNERS
cookiecutter/{{cookiecutter.project_name}}/infra/cmake/: BuildTelemetry.cmake  beman-install-library-config.cmake  beman-install-library.cmake  enable-experimental-import-std.cmake
cookiecutter/{{cookiecutter.project_name}}/src/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.cpp
cookiecutter/{{cookiecutter.project_name}}/tests/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.test.cpp
examples/: identity_as_default_projection.cpp
include/beman/exemplar/: CMakeLists.txt  exemplar.hpp
infra/: .beman_submodule  .pre-commit-config.yaml
infra/cmake/: BuildTelemetryConfig.cmake  Config.cmake.in  beman-install-library-config.cmake  beman-install-library.cmake  enable-experimental-import-std.cmake  telemetry.sh  use-fetch-content.cmake
src/beman/exemplar/: CMakeLists.txt
tests/beman/exemplar/: CMakeLists.txt
